--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, "Expense ##{@expense.id}") %>
-<h1><%= icon('far', 'credit-card', class: 'fa-fw left') %>Expense #<%= @expense.id %></h1>
-<p class="doicons">
-	<%= link_to edit_expense_path, title: 'Edit' do %><%= icon_action_edit %><% end %>
-	<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><%= icon_action_delete %><% end %>
-</p>
+<div class="page-heading">
+	<h1><%= icon('far', 'credit-card', class: 'fa-fw left') %>Expense #<%= @expense.id %></h1>
+	<div class="actions">
+		<%= link_to edit_expense_path, title: 'Edit' do %><%= icon_action_edit %><% end %>
+		<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><%= icon_action_delete %><% end %>
+	</div>
+</div>
 <div class="panel">
 	<p><strong>Name:</strong> <%= @expense.name %></p>
 	<p><strong>Vendor:</strong> <%= link_to @expense.vendor do %><%= @expense.vendor.name %><% end %></p>
