--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -1,30 +1,27 @@
 <%= form_for([@invoice, @invoice.lines.build]) do |f| %>
-<div class="form-elements">
-	<div class="form-element">
-		<%= f.text_field :description, :required => true, :placeholder => 'Description' %>
+<div class="form-section">
+	<div class="form-elements">
+		<div class="form-element">
+			<%= f.label :description %>
+			<%= f.text_field :description, :required => true %>
+		</div>
+		<div class="form-element">
+			<%= f.label :hours %>
+			<%= f.text_field :hours %>
+		</div>
+		<div class="form-element">
+			<%= f.label :rate %>
+			<%= f.text_field :rate, :placeholder => @ratePlaceholder %>
+		</div>
+		<div class="form-element">
+			<%= f.label :total %>
+			<%= f.text_field :total, :required => true, :placeholder => 'Total' %>
+		</div>
+		<div class="form-element form-element-radio-wrap full">
+			<%= check_box(:line, :discount, {}, 'true', 'false') %>
+			<%= f.label :discount, 'Discount?' %>
+		</div>
 	</div>
-	<div class="form-element">
-		<%= f.text_field :hours, :placeholder => 'Hours', class: 'text-center' %>
-	</div>
-	<div class="form-element">
-		<%= f.text_field :rate, :placeholder => @ratePlaceholder, class: 'text-center' %>
-	</div>
-	<div class="form-element">
-		<%= f.text_field :total, :required => true, :placeholder => 'Total', class: 'text-center' %>
-	</div>
-	<div class="form-element full">
-		<%= check_box(:line, :discount, {}, 'true', 'false') %>
-		<%= f.label :discount, 'Discount?' %>
-  </div>
 </div>
 <button type="submit" class="btn btn-success btn-block"><%= icon('far', 'save', class: 'left') %>Create</button>
 <% end %>
-
-<script type="text/javascript">
-jQuery(document).ready(function($) {
-	$('#line_hours, #line_rate').change(function() {
-		var totalCharged = $('#line_hours').val() * $('#line_rate').val();
-		$('#line_total').val(totalCharged);
-	});
-});
-</script>
