--- a/app/views/years/_quarter.html.erb
+++ b/app/views/years/_quarter.html.erb
@@ -1,8 +1,8 @@
 <div class="col-lg-6">
   <h3 class="text-center">Quarter <%= quarterNumber %></h3>
   <h4 class="text-center"><%= Date::MONTHNAMES[3 * quarterNumber - 2] %> - <%= Date::MONTHNAMES[3 * quarterNumber] %></h4>
-  <p class="lead">Income: <span class="currency green"><%= number_to_currency(@year.incomeByQuarter(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
-  <p class="lead">Tax Est.: <span class="currency red"><%= number_to_currency(@year.taxOwedByQuarterActualCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
-  <p class="lead">Payment Est.*: <span class="currency red"><%= number_to_currency(@year.taxOwedByQuarterTaxCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
+  <p>Income: <span class="currency green"><%= number_to_currency(@year.incomeByQuarter(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
+  <p>Tax Est.: <span class="currency red"><%= number_to_currency(@year.taxOwedByQuarterActualCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
+  <p>Payment Est.*: <span class="currency red"><%= number_to_currency(@year.taxOwedByQuarterTaxCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
   <hr class="hidden-lg hidden-md">
 </div>
