--- a/app/views/years/_tab-overview.html.erb
+++ b/app/views/years/_tab-overview.html.erb
@@ -1,9 +1,9 @@
 <div class="col-md-4">
-	<p class="lead">Total Income: <span class="currency green"><%= number_to_currency(@year.incomeTotal, { :negative_format => '(%n)' }) %></span></p>
-	<p class="lead">Tax Rate*: <span class="currency"><%= number_to_percentage(@year.taxrate * 100, :precision => 2) %></span></p>
-	<p class="lead">Tax Estimate*: <span class="currency red"><%= number_to_currency(@year.taxOwedTotal, { :negative_format => '(%n)' }) %></span></p>
-	<p class="lead">Discounts Given^: <span class="currency"><%= number_to_currency(@year.invoiceDiscountsTotal, { :negative_format => '(%n)' }) %></span></p>
-	<p class="lead">Expenses (to-date): <span class="currency red"><%= number_to_currency(@year.expenses.sum(:cost), { :negative_format => '(%n)' }) %></span></p>
+	<p>Total Income: <span class="currency green"><%= number_to_currency(@year.incomeTotal, { :negative_format => '(%n)' }) %></span></p>
+	<p>Tax Rate*: <span class="currency"><%= number_to_percentage(@year.taxrate * 100, :precision => 2) %></span></p>
+	<p>Tax Estimate*: <span class="currency red"><%= number_to_currency(@year.taxOwedTotal, { :negative_format => '(%n)' }) %></span></p>
+	<p>Discounts Given^: <span class="currency"><%= number_to_currency(@year.invoiceDiscountsTotal, { :negative_format => '(%n)' }) %></span></p>
+	<p>Expenses (to-date): <span class="currency red"><%= number_to_currency(@year.expenses.sum(:cost), { :negative_format => '(%n)' }) %></span></p>
 	<p><small>*Tax rate and estimates are conservative and independent of expenses and discounts.</small></p>
 </div>
 <div class="col-md-7 col-md-offset-1">
