--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -10,12 +10,48 @@ body {
 }
 
 main {
+
 	z-index: 1;
 	position: relative;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: stretch;
+
+	&.main-solo {
+
+		margin-left: auto;
+		margin-right: auto;
+		max-width: $screen-md;
+
+		&:before {
+			content: ' ';
+			z-index: 1;
+			position: absolute;
+			top: 0px;
+			left: 50%;
+			transform: translate(-50%, 0px);
+			width: 100vw;
+			height: 100%;
+			background: $black;
+		}
+
+		h1 {
+			flex-basis: 100%;
+			text-align: center;
+		}
+
+		section {
+			z-index: 2;
+			position: relative;
+		}
+
+		.payment-options {
+			margin-top: 1.5rem;
+		}
+
+	}
+
 }
 
 .wrapper {
@@ -40,4 +76,12 @@ main {
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+hr {
+	margin: 3rem auto;
+	width: 40%;
+	height: 1px;
+	background: $color-primary;
+	border: 0px;
 }
