--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -16,6 +16,11 @@ h1 {
 
 	font-size: 2.2rem;
 
+	@include mq('mobile') {
+		font-size: 1.5rem;
+		word-break: break-all;
+	}
+
 	a {
 		color: inherit;
 		text-decoration: none;
