--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -30,7 +30,8 @@ $mobile-breakpoint-px: $screen-md-px;
 
 $max-breakpoint: $screen-xxl;
 
-$nav-width: 300px;
+$nav-width: 18.75rem;
+$content-width-max: 75rem;
 
 $transition-speed: 300ms;
 
