--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -11,14 +11,18 @@ header {
 	color: $white;
 	background: $color-primary;
 
+	@include mq('mobile') {
+		padding-right: 1.5rem;
+	}
+
 	.logo-wrap {
 
 		padding: 0px 1.5rem;
-		flex-basis: $nav-width;
+		flex-basis: var(--nav-width);
 
 		a {
 			display: block;
-			max-width: 200px;
+			max-width: 80%;
 		}
 
 		img,
@@ -32,6 +36,7 @@ header {
 
 		position: relative;
 		flex: 1;
+		max-width: #{$content-width-max - 3rem};
 
 		i[class^="fa"] {
 			position: absolute;
@@ -63,7 +68,8 @@ header {
 
 	.user-meta-wrap {
 
-		margin-left: 1.5rem;
+		margin-left: auto;
+		padding-left: 1.5rem;
 
 		a {
 			color: currentColor;
