--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -11,4 +11,5 @@
 @import 'partials/buttons';
 @import 'partials/forms';
 @import 'partials/charts';
-@import 'partials/login'
+@import 'partials/login';
+@import 'partials/alerts';
