--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -44,7 +44,7 @@ main {
 			transform: translate(-50%, 0px);
 			width: 100vw;
 			height: 100%;
-			background: $black;
+			background: inherit;
 		}
 
 		h1 {
